--- a/src/PyNvCodec/CMakeLists.txt
+++ b/src/PyNvCodec/CMakeLists.txt
@@ -37,9 +37,8 @@ option(FETCHCONTENT_QUIET OFF)
 include(FetchContent)
 fetchcontent_declare(
     pybind11
-    URL https://github.com/pybind/pybind11/archive/v2.10.0.tar.gz
-    URL_HASH
-        SHA256=eacf582fa8f696227988d08cfc46121770823839fe9e301a20fbce67e7cd70ec
+       GIT_REPOSITORY https://github.com/pybind/pybind11.git
+       GIT_TAG v2.13.6
 )
 fetchcontent_makeavailable(pybind11)
 
